# ZeroDaemon

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.sh  setup.sh
config/: models.yaml  settings.yaml
zerodaemon/agent/: daemon.py  graph.py  mcp_tools.py  rag.py  state.py  tools.py
zerodaemon/api/: app.py  deps.py
zerodaemon/api/routes/: agent.py  models.py  scans.py  settings.py
zerodaemon/api/static/: index.html
zerodaemon/core/: config.py
zerodaemon/db/: sqlite.py
zerodaemon/models/: providers.py  registry.py  schemas.py  usage.py
zerodaemon/utils/: deps.py
